fix(components): fix for customized type and spacing

--- a/packages/components/src/components/accordion/_accordion.scss
+++ b/packages/components/src/components/accordion/_accordion.scss
@@ -73,11 +73,6 @@
 
   .#{$prefix}--accordion__arrow {
     @include focus-outline('reset');
-    // Without flex basis and flex shrink being set here, our icon width can go
-    // <16px and cause the icon to render in the incorrect artboard size
-    flex: 0 0 1rem;
-    width: 1rem;
-    height: 1rem;
     margin: $accordion-arrow-margin;
     fill: $ui-05;
     // TODO: RTL rotate(180deg);
